# Paddle-Metax

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  build_inc.sh  build_inc_CI.sh  build_paddle.sh  change_patch.sh  clean_paddle.sh  debug_log.md  install_paddle.sh  my_script.lds
.github/workflows/: _Metax_work_private.yaml  update_paddle_submodule.yml
cinn/: CMakeLists.txt  cinn_interface.cc  cinn_interface.h
cinn/compiler/: compiler.cc
cinn/passes/: pass_manager.cc
cinn/runtime/: cinn_runtime.cc
cmake/: version.cmake  warpctc.cmake
common/: custom_cast_data_type.cu  custom_device_func.h
flags/: utils.cc
kernels/cuda_kernels/: deformable_conv_grad_kernel_register.cu  deformable_conv_kernel_register.cu  fp8_quant_blockwise_kernel_register.cu  gelu_grad_kernel_register.cu  group_norm_grad_kernel_register.cu  kldiv_loss_kernel_register.cu  mp_allreduce_sum_kernel_register.cu  multiplex_grad_kernel_register.cu  yolo_box_post_kernel_register.cu
kernels/custom_kernel/: cross_entropy_kernel_register.cu  flash_attn_grad_kernel.cu  flash_attn_kernel.cu  flash_attn_kernel.h  flashattn.h  softmax_kernel_register.cu
kernels/ernie_core/: cal_aux_loss_grad_kernel_register.cu  cal_aux_loss_kernel_register.cu  expand_modality_expert_id_kernel_register.cu  moe_gate_dispatch_permute_grad_kernel_register.cu  moe_gate_dispatch_permute_kernel_register.cu  moe_ops_partial_nosoftmaxtopk_grad_kernel_register.cu  moe_ops_partial_nosoftmaxtopk_kernel_register.cu  register_build_src_rank_and_local_expert_id_kernel.cu
kernels/fusion/: fused_layernorm_kernel_register.cu
patches/: paddle.patch  patch_nullptr.patch
runtime/: process_cupti_data.cc  runtime.cc
tests/: CMakeLists.txt  paddle_aes_test.ciphertext  paddle_aes_test.keyfile  run_test.sh  test.txt
tests/profiler_log/: host_ZJ-PC-10-2-118-208pid_1469169_time_2026_04_21_16_14_21_315176.paddle_trace.json  host_ZJ-PC-10-2-118-208pid_1469169_time_2026_04_21_16_14_21_318786.paddle_trace.json  host_ZJ-PC-10-2-118-208pid_1695999_time_2026_04_21_13_36_12_817895.paddle_trace.json  host_ZJ-PC-10-2-118-208pid_1695999_time_2026_04_21_13_36_12_820864.paddle_trace.json  host_ZJ-PC-10-2-118-208pid_1711848_time_2026_04_21_14_00_31_553922.paddle_trace.json  host_ZJ-PC-10-2-118-208pid_1711848_time_2026_04_21_14_00_31_556923.paddle_trace.json  (+24 more)
tests/unit_test/: test_matmul_out.py  (+3 more)
(+28 files in other folders)
